--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,42 @@
+annotated-types==0.7.0
+anyio==4.12.1
+certifi==2026.1.4
+click==8.3.1
+construct==2.10.70
+construct-typing==0.7.0
+contourpy==1.3.3
+cycler==0.12.1
 fastapi==0.115.0
-uvicorn==0.32.0
-pandas==2.2.0
-networkx==3.2.1
-scikit-learn==1.5.0
-numpy==1.26.4
-python-multipart==0.0.9
-lightgbm==4.6.0
+fonttools==4.61.1
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.11
 joblib==1.3.2
+jsonalias==0.1.1
+kiwisolver==1.4.9
+lightgbm==4.6.0
+matplotlib==3.10.8
+networkx==3.2.1
+numpy==1.26.4
+packaging==26.0
+pandas==2.2.0
+pillow==12.1.0
+pydantic==2.12.5
+pydantic_core==2.41.5
+pyparsing==3.3.2
+python-dateutil==2.9.0.post0
+python-multipart==0.0.9
+pytz==2025.2
+scikit-learn==1.5.0
+scipy==1.17.0
+six==1.17.0
 solana==0.36.11
 solders==0.27.1
-matplotlib
+starlette==0.38.6
+threadpoolctl==3.6.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+uvicorn==0.32.0
+websockets==15.0.1
